[tool.poetry]
name = "acl-api"
description = "ACL api built on aerleon"
version = "0.0.1"
authors = ["jakob.mellberg@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pydantic = { extras = ["email"], version = "^2.6.1" }
fastapi = "^0.115.2"
uvicorn = "^0.27.0"
uvloop = "^0.19.0"
httptools = "^0.6.1"
uuid = "^1.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
SQLAlchemy-Utils = "^0.41.1"
python-jose = "^3.3.0"
SQLAlchemy = "^2.0.39"
pytest = "^7.4.2"
python-multipart = "^0.0.9"
httpx = "^0.26.0"
pydantic-settings = "^2.0.3"
redis = "^5.0.1"
arq = "^0.25.0"
gunicorn = "^22.0.0"
bcrypt = "^4.1.1"
fastcrud = "^0.15.1"
faker = "^26.0.0"
psycopg2-binary = "^2.9.9"
pytest-mock = "^3.14.0"
aerleon = "^1.9.0"
sqlalchemy-mixins = {git = "https://github.com/absent1706/sqlalchemy-mixins.git", rev = "9877efd"}
ruff = "^0.6.9"
fastapi-pagination = "^0.12.34"
fastapi-filter = "^2.0.1"
paramiko = "^3.5.1"
netmiko = "^4.5.0"
pytest-cov = "^6.1.1"
gitpython = "^3.1.44"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
netutils = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true